# gpu_log_analyzer

./: PROJECT_BRIEF.md  README.md  pyproject.toml
data/: nvidia_xid_catalog_attribution.md  xid_reference.json
gpu_log_analyzer/: classifier.py  cli.py  generator.py  models.py  parser.py  reporter.py
samples/real/: README.md
samples/synthetic/: README.md
tests/: conftest.py  test_classifier.py  test_parser.py
